--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -572,6 +572,10 @@ video {
   overflow: auto;
 }
 
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
 .rounded-xl{
   border-radius: 0.75rem;
 }
@@ -629,12 +633,6 @@ video {
 .text-p-color{
   --tw-text-opacity: 1;
   color: rgb(123 135 157 / var(--tw-text-opacity));
-}
-
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-xl{
